--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
                 <ul>
                     <li class="list-items">
                         <div class="circle-icon">
-                            1
+                            <span>
+                                1
+                            </span>   
                         </div>
                         <div class="list-item-info">
                             <h5 class="nav-heading">STEP 1</h5>
@@ -23,7 +25,9 @@
                     </li>
                     <li class="list-items">
                         <div class="circle-icon">
-                            2
+                            <span>
+                                2
+                            </span>  
                         </div>
                         <div class="list-item-info">
                             <h5 class="nav-heading">STEP 2</h5>
@@ -32,7 +36,9 @@
                     </li>
                     <li class="list-items">
                         <div class="circle-icon">
-                            3
+                            <span>
+                                3
+                            </span>  
                         </div>
                         <div class="list-item-info">
                             <h5 class="nav-heading">STEP 3</h5>
@@ -41,7 +47,9 @@
                     </li>
                     <li class="list-items">
                         <div class="circle-icon">
-                            4
+                            <span>
+                                4
+                            </span>  
                         </div>
                         <div class="list-item-info">
                             <h5 class="nav-heading">STEP 4</h5>
@@ -59,15 +67,15 @@
             <form class="form-group">
                 <div class="field-group">
                     <label class="form-label">Name</label>
-                    <input class="form-input"/>
+                    <input type="text" name="name" class="form-input" placeholder="Enter your name"/>
                 </div>
                 <div class="field-group">
                     <label class="form-label">Email Address</label>
-                    <input class="form-input"/>
+                    <input type="email" name="email" class="form-input" placeholder="Enter your email address"/>
                 </div>
                 <div class="field-group">
                     <label class="form-label">Phone Number</label>
-                    <input class="form-input"/>
+                    <input class="form-input" type="number" name="number" placeholder="Enter your phone numbers"/>
                 </div>
                 <input type="submit" class="btn" />
             </form>
