--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <label class="form-label">Phone Number</label>
                     <input class="form-input" type="number" name="number" placeholder="Enter your phone numbers"/>
                 </div>
-                <input type="submit" class="btn" />
+                <input type="submit" value="Next Step" class="btn" />
             </form>
         </main>
     </div>
