--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </div>
                 <div class="field-group">
                     <label class="form-label">Phone Number</label>
-                    <input class="form-input" type="number" name="number" placeholder="Enter your phone numbers"/>
+                    <input class="form-input" type="number" name="number" placeholder="e.g. +1 999-999-9999"/>
                 </div>
                 <input type="submit" value="Next Step" class="btn" />
             </form>
