js added for form validation

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
     <div id="container">
@@ -64,18 +65,18 @@
                 <h1 class="hgroup-heading">Personal Info</h1>
                 <p class="hgroup-p">Please provide your name, email address, and phone number.</p>
             </hgroup>
-            <form class="form-group">
+            <form id="form" class="form-group">
                 <div class="field-group">
                     <label class="form-label">Name</label>
-                    <input type="text" name="name" class="form-input" placeholder="Enter your name"/>
+                    <input type="text" id="name" class="form-input" placeholder="Enter your name"/>
                 </div>
                 <div class="field-group">
                     <label class="form-label">Email Address</label>
-                    <input type="email" name="email" class="form-input" placeholder="Enter your email address"/>
+                    <input type="email" id="email" class="form-input" placeholder="Enter your email address"/>
                 </div>
                 <div class="field-group">
                     <label class="form-label">Phone Number</label>
-                    <input class="form-input" type="number" name="number" placeholder="e.g. +1 999-999-9999"/>
+                    <input class="form-input" type="number" id="phonenumber" placeholder="e.g. +1 999-999-9999"/>
                 </div>
                 <input type="submit" value="Next Step" class="btn" />
             </form>
