fixing form validation.

--- a/index.html
+++ b/index.html
@@ -68,15 +68,15 @@
             <form id="form" class="form-group">
                 <div class="field-group">
                     <label class="form-label">Name</label>
-                    <input type="text" id="name" class="form-input" placeholder="Enter your name" required/>
+                    <input type="text" id="name" class="form-input" placeholder="Enter your name" />
                 </div>
                 <div class="field-group">
                     <label class="form-label">Email Address</label>
-                    <input type="email" id="email" class="form-input" placeholder="Enter your email address" required/>
+                    <input type="email" id="email" class="form-input" placeholder="Enter your email address" />
                 </div>
                 <div class="field-group">
                     <label class="form-label">Phone Number</label>
-                    <input class="form-input" type="number" id="phonenumber" placeholder="e.g. +1 999-999-9999" required/>
+                    <input class="form-input" type="number" id="phonenumber" placeholder="e.g. +1 999-999-9999" />
                 </div>
                 <input type="submit" value="Next Step" class="btn" />
             </form>
