--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <nav class="side-nav">
                 <ul>
                     <li class="list-items">
-                        <div class="circle-icon">
+                        <div class="circle-icon active">
                             <span>
                                 1
                             </span>   
@@ -67,15 +67,24 @@
             </hgroup>
             <form id="form" class="form-group">
                 <div class="field-group">
-                    <label class="form-label">Name</label>
+                    <div class="labels-container">
+                        <label class="form-label">Name</label>
+                        <label class="error-text">This field is required</label> 
+                    </div>
                     <input type="text" id="name" class="form-input" placeholder="Enter your name" />
                 </div>
                 <div class="field-group">
-                    <label class="form-label">Email Address</label>
+                    <div class="labels-container">
+                        <label class="form-label">Email Address</label>
+                        <label class="error-text">This field is required</label> 
+                    </div>
                     <input type="email" id="email" class="form-input" placeholder="Enter your email address" />
                 </div>
                 <div class="field-group">
-                    <label class="form-label">Phone Number</label>
+                    <div class="labels-container">
+                        <label class="form-label">Phone</label>
+                        <label class="error-text">This field is required</label> 
+                    </div>
                     <input class="form-input" type="number" id="phonenumber" placeholder="e.g. +1 999-999-9999" />
                 </div>
                 <input type="submit" value="Next Step" class="btn" />
