form error display message fixed

--- a/index.html
+++ b/index.html
@@ -69,21 +69,21 @@
                 <div class="field-group">
                     <div class="labels-container">
                         <label class="form-label">Name</label>
-                        <label class="error-text">This field is required</label> 
+                        <label class="error-text-name">This field is required</label> 
                     </div>
                     <input type="text" id="name" class="form-input" placeholder="Enter your name" />
                 </div>
                 <div class="field-group">
                     <div class="labels-container">
                         <label class="form-label">Email Address</label>
-                        <label class="error-text">This field is required</label> 
+                        <label class="error-text-email">This field is required</label> 
                     </div>
                     <input type="email" id="email" class="form-input" placeholder="Enter your email address" />
                 </div>
                 <div class="field-group">
                     <div class="labels-container">
                         <label class="form-label">Phone</label>
-                        <label class="error-text">This field is required</label> 
+                        <label class="error-text-phone">This field is required</label> 
                     </div>
                     <input class="form-input" type="number" id="phonenumber" placeholder="e.g. +1 999-999-9999" />
                 </div>
