--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
                         <label class="form-label">Name</label>
                         <label class="error-text-name">This field is required</label> 
                     </div>
-                    <input type="text" id="name" class="form-input" placeholder="Enter your name" />
+                    <input type="text" id="name" class="form-input" placeholder="e.g. Stephen King" />
                 </div>
                 <div class="field-group">
                     <div class="labels-container">
                         <label class="form-label">Email Address</label>
                         <label class="error-text-email">This field is required</label> 
                     </div>
-                    <input type="email" id="email" class="form-input" placeholder="Enter your email address" />
+                    <input type="email" id="email" class="form-input" placeholder="e.g. stephenking@lorem.com" />
                 </div>
                 <div class="field-group">
                     <div class="labels-container">
