2nd page html and css added

--- a/secondpage.html
+++ b/secondpage.html
@@ -72,8 +72,8 @@
                             <img/>
                         </div>
                         <div class="text-group">
-                            <h5></h5>
-                            <p class="card-text"></p>
+                            <h5 class="card-label-text">Arcade</h5>
+                            <p class="card-text">$9/mon</p>
                         </div>
                     </div>
                     <div class="card">
@@ -81,8 +81,8 @@
                             <img/>
                         </div>
                         <div class="text-group">
-                            <h5></h5>
-                            <p class="card-text"></p>
+                            <h5 class="card-label-text">Advanced</h5>
+                            <p class="card-text">$12/mon</p>
                         </div>
                     </div>
                     <div class="card">
@@ -90,21 +90,23 @@
                             <img/>
                         </div>
                         <div class="text-group">
-                            <h5></h5>
-                            <p class="card-text"></p>
+                            <h5 class="card-label-text">Pro</h5>
+                            <p class="card-text">$15/mon</p>
                         </div>
                     </div>
                 </div>
-                <div>
-                    <h5>Monthly</h5>
+                <div class="grey-bar">
+                    <h5 class="grey-bar-month">Monthly</h5>
                     <label class="switch">
                         <input type="checkbox">
                         <span class="slider round"></span>
                     </label>
-                    <p>Yearly</p>
+                    <p class="grey-bar-year">Yearly</p>
                 </div>
-                <input type="submit" value="Next Step" class="btn" />
-                <input type="submit" value="Go Back" class="btn-goback" />
+                <div class="buttons">
+                    <input type="submit" value="Go Back" class="btn-goback" />
+                    <input type="submit" value="Next Step" class="btn" />
+                </div>
             </form>
         </main>
     </div>
