2nd page card selection fixed

--- a/secondpage.html
+++ b/secondpage.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="secondpage.css">
-    <script src="script.js"></script>
 </head>
 <body>
     <div id="container">
@@ -110,5 +109,6 @@
             </form>
         </main>
     </div>
+    <script src="secondpage.js"></script>
 </body>
 </html>
