--- a/secondpage.html
+++ b/secondpage.html
@@ -13,7 +13,7 @@
             <nav class="side-nav">
                 <ul>
                     <li class="list-items">
-                        <div class="circle-icon active">
+                        <div class="circle-icon">
                             <span>
                                 1
                             </span>   
@@ -24,7 +24,7 @@
                         </div>
                     </li>
                     <li class="list-items">
-                        <div class="circle-icon">
+                        <div class="circle-icon active">
                             <span>
                                 2
                             </span>  
@@ -68,7 +68,7 @@
                 <div class="card-group">
                     <div class="card">
                         <div class="icon">
-                            <img/>
+                            <img src="assets/images/icon-arcade.svg" alt="arcade icon"/>
                         </div>
                         <div class="text-group">
                             <h5 class="card-label-text">Arcade</h5>
@@ -77,7 +77,7 @@
                     </div>
                     <div class="card">
                         <div class="icon">
-                            <img/>
+                            <img src="assets/images/icon-advanced.svg" alt="advanced icon"/>
                         </div>
                         <div class="text-group">
                             <h5 class="card-label-text">Advanced</h5>
@@ -86,7 +86,7 @@
                     </div>
                     <div class="card">
                         <div class="icon">
-                            <img/>
+                            <img src="assets/images/icon-pro.svg" alt="pro icon"/>
                         </div>
                         <div class="text-group">
                             <h5 class="card-label-text">Pro</h5>
